# kguitar

./: CMakeLists.txt  ChangeLog  INSTALL  README  TRANSLATORS  VERSION
branches/kde4/: AUTHORS  CMakeLists.txt
branches/kde4/doc/en/: CMakeLists.txt  index.docbook
branches/kde4/kguitar/: CMakeLists.txt  chord.h  fingers.cpp  fretboard.cpp  kguitar_part.cpp  melodyeditor.cpp  options.cpp  optionsmelodyeditor.cpp  optionsmelodyeditor.h  optionsmidi.cpp  optionsmidi.h  playbacktracker.cpp  playbacktracker.h  songprint.cpp  songview.cpp  songview.h  songviewcommands.cpp  songviewcommands.h  trackdrag.cpp  tracklist.cpp  trackview.cpp
branches/kde4/kguitar/convert/: convertgtp.cpp  convertgtp.h
branches/kde4/kguitar/data/: tabsong.cpp
branches/kde4/kguitar/ui/chord/: chordeditor.cpp  chordlistitem.h  fingering.cpp
branches/kde4/po/ru/: CMakeLists.txt
doc/en/: CMakeLists.txt  index.docbook
icons/: CMakeLists.txt
kguitar/: CMakeLists.txt  bardelegate.cpp  bardelegate.h  chord.cpp  fingerlist.cpp  fingers.cpp  fretboard.cpp  fretboard.h  global.h  keysig.cpp  keysig.h  kgfontmap.cpp  kgfontmap.h  kguitar_part.cpp  kguitar_part.h  melodyeditor.cpp  melodyeditor.h  notespinbox.cpp  notespinbox.h  options.cpp  options.h  optionsexportascii.cpp  optionsexportascii.h  optionsexportmusixtex.cpp  optionsexportmusixtex.h  optionsmelodyeditor.cpp  optionsmelodyeditor.h  optionsmidi.cpp  optionsmidi.h  optionsmusictheory.cpp  optionsmusictheory.h  optionspage.cpp  optionspage.h  optionsprinting.cpp  optionsprinting.h  org.kde.kguitar_part.desktop  org.kde.x-kguitar.desktop  playbacktracker.cpp  playbacktracker.h  radiustuner.cpp  (+36 more)
kguitar/convert/: convertascii.cpp  convertascii.h  convertbase.h  convertgtp.cpp  convertgtp.h  convertkg.cpp  convertmidi.cpp  convertmidi.h  converttex.cpp  converttex.h  converttse3.cpp  converttse3.h  convertxml.cpp  convertxml.h  musicxml.cpp
kguitar/data/: tabcolumn.cpp  tabcolumn.h  tabsong.cpp  tabsong.h  tabtrack.cpp  tabtrack.h
kguitar/toolbar/: CMakeLists.txt
kguitar/ui/: rhythmeditor.cpp  rhythmeditor.h  rhythmeditor.ui  setsong.cpp  setsong.h  setsong.ui
kguitar/ui/chord/: chordanalyzer.cpp  chordeditor.cpp  chordeditor.h  chordlistitem.cpp  fingering.cpp  fingering.h  fingerlist.cpp  fingerlist.h  strumming.cpp  strumming.h
kguitar_shell/: CMakeLists.txt  kguitar.cpp  kguitar.h  main.cpp  org.kde.kguitar.desktop
po/: CMakeLists.txt
po/es/: kguitar.po
po/fr/: kguitar.po
po/it/: CMakeLists.txt  kguitar.po
po/ru/: CMakeLists.txt
